test(unit): add get chat history unit testing with swagger gen
