# internal/handlers/interview_session.go
@@ -62,9 +62,9 @@ func NewInterviewSessionHandler(
 // @Param is_consent formData boolean true "User consent for interview"
 // @Security BearerAuth
 // @Success 201 {object} entities.CreateInterviewSessionWithNewResumeResponse
-// @Failure 400 {object} app_error.AppError "Validation error or business logic error"
-// @Failure 401 {object} app_error.AppError "Unauthorized"
-// @Failure 500 {object} app_error.AppError "Internal server error"
+// @Failure 400 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Validation error or business logic error"
+// @Failure 401 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Unauthorized"
+// @Failure 500 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Internal server error"
 // @Router /sessions [post]
 func (h *InterviewSessionHandler) CreateInterviewSessionWithNewResume(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -102,9 +102,9 @@ func (h *InterviewSessionHandler) CreateInterviewSessionWithNewResume(c *gin.Con
 // @Param request body entities.CreateInterviewSessionWithExistingResumeReq true "Interview session creation request with existing resume"
 // @Security BearerAuth
 // @Success 201 {object} entities.CreateInterviewSessionWithExistingResumeResp
-// @Failure 400 {object} app_error.AppError "Validation error or business logic error"
-// @Failure 401 {object} app_error.AppError "Unauthorized"
-// @Failure 500 {object} app_error.AppError "Internal server error"
+// @Failure 400 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Validation error or business logic error"
+// @Failure 401 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Unauthorized"
+// @Failure 500 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Internal server error"
 // @Router /sessions/existing [post]
 func (h *InterviewSessionHandler) CreateInterviewSessionWithExistingResume(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -142,9 +142,9 @@ func (h *InterviewSessionHandler) CreateInterviewSessionWithExistingResume(c *gi
 // @Param id path string true "Session token"
 // @Param access_token query string true "Access token for authentication"
 // @Success 200 "WebSocket connection established"
-// @Failure 400 {object} app_error.AppError "Invalid session token or request"
-// @Failure 401 {object} app_error.AppError "Unauthorized"
-// @Failure 500 {object} app_error.AppError "Internal server error"
+// @Failure 400 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Invalid session token or request"
+// @Failure 401 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Unauthorized"
+// @Failure 500 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Internal server error"
 // @Router /ws/connect/{id} [get]
 func (h *InterviewSessionHandler) OpenWsConnection(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -195,18 +195,18 @@ func (h *InterviewSessionHandler) OpenWsConnection(c *gin.Context) {
 }
 
 // OpenWsConnection godoc
-// @Summary Open WebSocket connection
+// @Summary Get chat history by session token
 // @Description Get chat history by session token
 // @Tags Interview Sessions
 // @Accept json
 // @Produce json
 // @Param session_token path string true "Session token"
-// @Param access_token query string true "Access token for authentication"
+// @Security BearerAuth
 // @Success 200 {object} entities.GetChatHistoryBySessionTokenResp "Chat history"
-// @Failure 400 {object} app_error.AppError "Invalid session token or request"
-// @Failure 401 {object} app_error.AppError "Unauthorized"
-// @Failure 500 {object} app_error.AppError "Internal server error"
-// @Router /sessions/chat-history [get]
+// @Failure 400 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Invalid session token or request"
+// @Failure 401 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Unauthorized"
+// @Failure 500 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Internal server error"
+// @Router /sessions/chat-history/{session_token} [get]
 func (h *InterviewSessionHandler) GetChatHistoryBySessionToken(c *gin.Context) {
 	ctx := c.Request.Context()
 	h.log.InfoWithID(ctx, "[Handler: GetChatHistoryBySessionToken] Called")
